<resources>
    <string name="app_name">Brewery Database</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_breweries">All Breweries</string>
    <string name="menu_search">Search</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="brewery_name">Brewery Name</string>
    <string name="brewery_type">Brewery Type</string>
    <string name="brewery_city">Brewery City </string>
    <string name="brewery_name_detail">Brewery Name</string>
    <string name="brewery_country">Brewery Country</string>
    <string name="brewery_city_detail">Brewery City</string>
    <string name="brewery_state">Brewery State</string>
    <string name="brewery_date_of_create">Brewery date of create</string>
    <string name="brewry_website_url">BreweryWebsite</string>
    <string name="network_error_no_connection">Check internet connection </string>
    <string name="network_error_unknown">Unknown error. Try later</string>
    <string name="network_error_unauthorized">Invalid login or password</string>
    <string name="network_error_not_found">Page not found</string>
    <string name="network_error_request_timeout">Request timeout</string>
    <string name="network_error_bad_request">Bad request</string>
    <string name="network_error_internal_server_error">Internal server error</string>
</resources>